@@ -26,10 +26,13 @@ import VASSAL.configure.Configurer;
 import VASSAL.configure.ConfigurerFactory;
 import VASSAL.configure.IconConfigurer;
 import VASSAL.configure.NamedHotKeyConfigurer;
+import VASSAL.configure.PlayerIdFormattedExpressionConfigurer;
 import VASSAL.configure.VisibilityCondition;
 import VASSAL.i18n.Resources;
+import VASSAL.i18n.TranslatableConfigurerFactory;
 import VASSAL.tools.LaunchButton;
 import VASSAL.tools.NamedKeyStroke;
+import VASSAL.tools.ToolBarComponent;
 
 import java.awt.Component;
 import java.awt.event.ActionListener;
@@ -55,6 +58,7 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
   public static final String CAN_DISABLE   = "canDisable";   //NON-NLS
   public static final String PROPERTY_GATE = "propertyGate"; //NON-NLS
   public static final String DISABLED_ICON = "disabledIcon"; //NON-NLS
+  public static final String HIDE_WHEN_DISABLED = "hideWhenDisabled"; //NON-NLS
 
   protected LaunchButton launch;              // Our toolbar "launch button"
 
@@ -62,6 +66,7 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
 
   protected boolean showDisabledOptions = true; // True if our configurers are allowed to show the disable-this-button properties
   protected boolean canDisable = false;         // True if we have a disable-this-button property
+  protected boolean hideWhenDisabled = false;   // True if we hide the button when disabled
   protected String propertyGate = "";           // Name of our gating property (button is disabled if this global property is "true")
   protected MutableProperty.Impl property;
 
@@ -79,6 +84,10 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
 
   protected void setNameKey(String nameKey) {
     this.nameKey = nameKey;
+  }
+
+  protected String getNameKey() {
+    return nameKey;
   }
 
   protected void setTooltipKey(String tooltipKey) {
@@ -115,7 +124,8 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
    * @return launch button
    */
   protected LaunchButton makeLaunchButton(String tooltip, String button_text, String iconFile, ActionListener action) {
-    launch = new LaunchButton(button_text, tooltipKey, buttonTextKey, hotKeyKey, iconKey, action);
+    launch = new LaunchButton(button_text, tooltipKey, buttonTextKey, hotKeyKey, iconKey, action, true);
+    //launch = new LaunchButton(button_text, tooltipKey, buttonTextKey, hotKeyKey, iconKey, action);
     if (!tooltip.isEmpty()) {
       setAttribute(tooltipKey, tooltip);
     }
@@ -210,6 +220,11 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
   public void checkDisabled() {
     if ((!isShowDisabledOptions() || !canDisable) && (launch != null)) {
       launch.setEnabled(true);
+
+      // Disabling hide-when-disabled for now, it seems to be creating problems
+      //launch.setForceInvisible(false);
+      //launch.checkVisibility();
+
       return;
     }
     if ((property == null) && !propertyGate.isEmpty()) {
@@ -226,6 +241,10 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
   public void disableIfTrue(boolean disable) {
     if (launch != null) {
       launch.setEnabled(!isShowDisabledOptions() || !canDisable || !disable);
+
+      // Disabling hide-when-disabled for now, it seems to be creating problems
+      //launch.setForceInvisible(disable && canDisable && hideWhenDisabled);
+      //launch.checkVisibility();
     }
   }
 
@@ -254,10 +273,10 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
   @Override
   public String[] getAttributeNames() {
     if (!nameKey.isEmpty()) {
-      return new String[]{nameKey, buttonTextKey, tooltipKey, iconKey, hotKeyKey, CAN_DISABLE, PROPERTY_GATE, DISABLED_ICON};
+      return new String[]{nameKey, buttonTextKey, tooltipKey, iconKey, hotKeyKey, CAN_DISABLE, PROPERTY_GATE, HIDE_WHEN_DISABLED, DISABLED_ICON};
     }
     else {
-      return new String[]{buttonTextKey, tooltipKey, iconKey, hotKeyKey, CAN_DISABLE, PROPERTY_GATE, DISABLED_ICON};
+      return new String[]{buttonTextKey, tooltipKey, iconKey, hotKeyKey, CAN_DISABLE, PROPERTY_GATE, HIDE_WHEN_DISABLED, DISABLED_ICON};
     }
   }
 
@@ -282,6 +301,7 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
         Resources.getString(Resources.HOTKEY_LABEL),
         Resources.getString("Editor.AbstractToolbarItem.can_disable"),
         Resources.getString("Editor.AbstractToolbarItem.property_gate"),
+        Resources.getString("Editor.AbstractToolbarItem.hide_when_disabled"),
         Resources.getString("Editor.AbstractToolbarItem.disabled_icon"),
       };
     }
@@ -293,6 +313,7 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
         Resources.getString(Resources.HOTKEY_LABEL),
         Resources.getString("Editor.AbstractToolbarItem.can_disable"),
         Resources.getString("Editor.AbstractToolbarItem.property_gate"),
+        Resources.getString("Editor.AbstractToolbarItem.hide_when_disabled"),
         Resources.getString("Editor.AbstractToolbarItem.disabled_icon"),
       };
     }
@@ -315,25 +336,35 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
     if (!nameKey.isEmpty()) {
       return new Class<?>[]{
         String.class,
-        String.class,
+        FormattedStringConfig.class,
         String.class,
         IconConfig.class,
         NamedKeyStroke.class,
         Boolean.class,
         String.class,
+        Boolean.class,
         IconConfig.class,
       };
     }
     else {
       return new Class<?>[]{
-        String.class,
+        FormattedStringConfig.class,
         String.class,
         IconConfig.class,
         NamedKeyStroke.class,
         Boolean.class,
         String.class,
-        IconConfig.class,
+        Boolean.class,
+        IconConfig.class
       };
+    }
+  }
+
+
+  public static class FormattedStringConfig implements TranslatableConfigurerFactory {
+    @Override
+    public Configurer getConfigurer(AutoConfigurable c, String key, String name) {
+      return new PlayerIdFormattedExpressionConfigurer(key, name, new String[]{});
     }
   }
 
@@ -394,6 +425,15 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
         }
       }
     }
+    else if (HIDE_WHEN_DISABLED.equals(key)) {
+      if (value instanceof String) {
+        hideWhenDisabled = "true".equals(value); //NON-NLS
+      }
+      else if (value instanceof Boolean) {
+        hideWhenDisabled = (Boolean)value;
+      }
+      checkDisabled();
+    }
     else {
       launch.setAttribute(key, value);
     }
@@ -423,6 +463,9 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
     else if (DISABLED_ICON.equals(key)) {
       return disabledIconConfig.getValueString();
     }
+    else if (HIDE_WHEN_DISABLED.equals(key)) {
+      return String.valueOf(hideWhenDisabled);
+    }
     else {
       return launch.getAttributeValueString(key);
     }
@@ -430,8 +473,14 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
 
   @Override
   public VisibilityCondition getAttributeVisibility(String key) {
-    if (List.of(PROPERTY_GATE, DISABLED_ICON).contains(key)) {
+    if (List.of(PROPERTY_GATE).contains(key)) {
       return () -> isShowDisabledOptions() && canDisable;
+    }
+    if (HIDE_WHEN_DISABLED.equals(key)) {
+      return () -> false;  // Disabling hide-when-disabled for now, it seems to be creating problems
+    }
+    if (DISABLED_ICON.equals(key)) {
+      return () -> isShowDisabledOptions() && canDisable; // && !hideWhenDisabled; // removed hide-when-disabled feature for now
     }
     else if (CAN_DISABLE.equals(key)) {
       return this::isShowDisabledOptions;
@@ -449,26 +498,40 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
   }
 
   /**
-   * Default behavior adds the button to the module toolbar.
+   * Default behavior adds the button to the parent component
    * @param parent parent Buildable to add this component to as a subcomponent.
    */
   @Override
   public void addTo(Buildable parent) {
     final GameModule gm = GameModule.getGameModule();
     gm.getGameState().addGameComponent(this);
-    gm.getToolBar().add(getComponent());
+
+    if (parent instanceof AbstractFolder) {
+      parent = ((AbstractFolder)parent).getNonFolderAncestor();
+    }
+
+    if (parent instanceof ToolBarComponent) {
+      ((ToolBarComponent)parent).getToolBar().add(getComponent());
+    }
   }
 
   /**
-   * Default behavior assumes we are removing this from the module toolbar
-   * @param b parent
+   * Remove from our parent
+   * @param parent parent
    */
   @Override
-  public void removeFrom(Buildable b) {
+  public void removeFrom(Buildable parent) {
     final GameModule gm = GameModule.getGameModule();
-    gm.getToolBar().remove(getComponent());
-    gm.getToolBar().revalidate();
     gm.getGameState().removeGameComponent(this);
+
+    if (parent instanceof AbstractFolder) {
+      parent = ((AbstractFolder)parent).getNonFolderAncestor();
+    }
+
+    if (parent instanceof ToolBarComponent) {
+      ((ToolBarComponent)parent).getToolBar().remove(getComponent());
+      ((ToolBarComponent)parent).getToolBar().revalidate();
+    }
   }
 
   @Override
@@ -491,7 +554,7 @@ public abstract class AbstractToolbarItem extends AbstractConfigurable implement
    */
   @Override
   public List<String> getMenuTextList() {
-    return List.of(getAttributeValueString(buttonTextKey), getAttributeValueString(tooltipKey));
+    return Arrays.asList(getAttributeValueString(buttonTextKey), getAttributeValueString(tooltipKey));
   }
 
   /**
